[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/react_bar/react_bar.gd" type="Script" id=1]
[ext_resource path="res://ui/vault_status/vault_status.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/FontH2.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/FontDefault.tres" type="DynamicFont" id=4]

[node name="ReactBar" type="MarginContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -113.0
custom_constants/margin_bottom = 10
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 103.0
custom_constants/separation = 16

[node name="HBox" type="HBoxContainer" parent="VBox"]
margin_right = 1024.0
margin_bottom = 64.0
size_flags_horizontal = 7
custom_constants/separation = 20
alignment = 1

[node name="GoodButton" type="Button" parent="VBox/HBox"]
margin_left = 360.0
margin_right = 460.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 3 )
text = "GOOD"

[node name="VaultStatus" parent="VBox/HBox" instance=ExtResource( 2 )]
margin_left = 480.0
margin_right = 544.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 32, 32 )

[node name="BadButton" type="Button" parent="VBox/HBox"]
margin_left = 564.0
margin_right = 664.0
margin_bottom = 64.0
rect_min_size = Vector2( 100, 0 )
custom_fonts/font = ExtResource( 3 )
text = "BAD"

[node name="StatusLabel" type="Label" parent="VBox"]
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 103.0
size_flags_horizontal = 7
custom_colors/font_color = Color( 1, 0.2, 0.2, 1 )
custom_fonts/font = ExtResource( 4 )
text = "status: init"
align = 1
valign = 1
